syntax = "proto3";

package reearth.cms.v1;

import "google/protobuf/timestamp.proto";

option go_package = "proto/v1";

service ReEarthCMS {
  // Auth
  rpc Authenticate(AuthRequest) returns (AuthResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse) {}

  // Main operations
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {}
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {}
  rpc GetModelGeoJSONExportURL(ExportRequest) returns (ExportURLResponse) {}
}

// Implementation note:
// Authentication should be implemented using gRPC interceptors
// JWT tokens should be passed in metadata with key "authorization"
// Format: "Bearer <token>"

// Auth messages
message AuthRequest {
  string api_key = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// Core messages
message Project {
  string id = 1;
  string name = 2;
  string description = 3;
  string workspace_id = 4;
  ProjectPublication publication = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ProjectPublication {
  ProjectPublicationScope scope = 1;
  bool asset_public = 2;
  optional string token = 3;
}

enum ProjectPublicationScope {
  SCOPE_UNSPECIFIED = 0;
  PUBLIC = 1;
  LIMITED = 2;
  PRIVATE = 3;
}

message Model {
  string id = 1;
  string project_id = 2;
  string name = 3;
  string description = 4;
  string key = 5;
  bool public = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Request messages
message ListProjectsRequest {
  string workspace_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListModelsRequest {
  string project_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ExportRequest {
  string project_id = 1;
  string model_id = 2;
  int32 expires_in_seconds = 3;
}

// Response messages
message ListProjectsResponse {
  repeated Project projects = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message ListModelsResponse {
  repeated Model models = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message ExportURLResponse {
  string url = 1;
  google.protobuf.Timestamp expires_at = 2;
}
